# ITN-engine

./: README.md  pyproject.toml  tc.csv  test_case.py
dictionary/exact_match/: system_email.dict  system_product.dict  system_unit.dict  user_custom.dict
docs/: inference_optimization.md
model/.ipynb_checkpoints/: tokenizer-checkpoint.json
model/itn/: config.json  generation_config.json
model/itncls/: config.json  model_quantized.onnx  tokenizer_config.json
src/: entity.py  exact_match.py  itn.py  model.py  postprocess.py  regex_match.py
